# OpenCV_ITK_MedicalImage

./: CMakeLists.txt  LogicaMedica.txt  Makefile  README.md  main.cpp
include/: image_processing.h  image_utils.h  utils.h
include/gui/: mainwindow.h
src/: image_processing.cpp  image_utils.cpp  main.cpp  utils.cpp
src/gui/: mainwindow.cpp
